[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menu/LevelSelectBox.gd" type="Script" id=1]

[node name="LevelSelectBox" type="PanelContainer"]
margin_top = 96.0
margin_right = 1320.0
margin_bottom = 154.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1313.0
margin_bottom = 51.0

[node name="Button" type="Button" parent="VBoxContainer"]
margin_right = 1306.0
margin_bottom = 20.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_left = 617.0
margin_top = 24.0
margin_right = 688.0
margin_bottom = 38.0
size_flags_horizontal = 6
custom_constants/separation = 20

[node name="CompletionLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 71.0
margin_bottom = 14.0
text = "Not beaten"

[node name="TimeLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
visible = false
margin_left = 91.0
margin_right = 186.0
margin_bottom = 14.0
text = "Best time: --:--"
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
